--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,11 +10,13 @@
     <string name="sugar">설탕</string>
     <string name="rtxt1">원시인</string>
     <string name="rtxt2">우주인</string>
+    <string name="starbuzz_logo">스타버즈로고</string>
+    <string name="click_me">클릭하세요</string>
     <string-array name="spinner_values">
         <item>밝은색</item>
+        <item>어두운색</item>
         <item>호박색</item>
         <item>갈색</item>
-        <item>어두운색</item>
         <item>초록색</item>
     </string-array>
 </resources>
